HW04-GC last version.